--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://my-gituser.github.io/my-twa",
+  "url": "https://wooyunwang.github.io/my-twa",
   "name": "My TWA",
-  "iconUrl": "https://my-gituser.github.io/my-twa/icon.png"
+  "iconUrl": "https://wooyunwang.github.io/my-twa/icon.png"
 }
